[package]
name = "server_template"
version = "0.1.3"
authors = ["闫刚 <yes7rose@sina.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cash_core = { path = "../cashmere_core/cash_core" }
cash_result = { path = "../cashmere_core/cash_result" }
account = { path = "../cashmere_core/account" }
account_server = { path = "../cashmere_core/account_server" }
auth = { path = "../cashmere_core/auth" }
configs = { path = "../cashmere_core/configs" }
majordomo = { path = "../cashmere_core/majordomo" }
managers = { path = "../cashmere_core/managers" }
entity = { path = "../cashmere_core/entity" }
runtime_handle = { path = "../cashmere_core/runtime_handle" }
core_service_handles = { path = "../cashmere_core/core_service_handles" }
view = { path = "../cashmere_core/view" }
manage_define = { path = "../cashmere_core/manage_define" }

dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = ["tonic", "bson"]}

prost = "0.12"
serde = "1.0.131"
serde_derive = "1.0.131"

clap = "3.1.19"

[build-dependencies]
manage_define = { path = "../cashmere_core/manage_define" }
dependencies_sync = { path = "../cashmere_core/dependencies_sync", features = ["tonic-build"]}
