[package]
name = "server_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
majordomo = { path = "../majordomo"}
search_engine = { path = "../search_engine"}
configs = { path = "../configs" }
managers = { path = "../managers" }

dependencies_sync = { path = "../dependencies_sync", features = [
  "tokio",
  "log",
  "rust-i18n",
  "once_cell",
] }

