[package]
name = "server_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
majordomo = { path = "../majordomo"}
configs = { path = "../configs" }
managers = { path = "../managers" }
view = { path = "../view" }



dependencies_sync = { path = "../dependencies_sync", features = [
  "tokio",
  "tokio-util",
  "log",
  "rust-i18n",
  "once_cell",
] }

